@@ -65,6 +65,26 @@ ecore_evas_software_wince_gdi_new(Ecore_WinCE_Window *parent EINA_UNUSED,
    return NULL;
 }
 
+EAPI Ecore_Evas *
+ecore_evas_direct3d_new(Ecore_Win32_Window *parent,
+			int                 x,
+			int                 y,
+			int                 width,
+			int                 height)
+{
+   return NULL;
+}
+
+EAPI Ecore_Evas *
+ecore_evas_gl_glew_new(Ecore_Win32_Window *parent,
+		       int                 x,
+		       int                 y,
+		       int                 width,
+		       int                 height)
+{
+   return NULL;
+}
+
 EAPI Ecore_WinCE_Window *
 ecore_evas_software_wince_window_get(const Ecore_Evas *ee EINA_UNUSED)
 {
